--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										<div class="col-sm-2"><a href="img/instruments.jpg" data-lightbox="image-4" data-title="Магазин инструментов"><div class="thumbnail"><img src="img/instruments.jpg"></div><a class="example-demo-link" target="_blank" href="http://prstfarv.github.io/instruments">Демо</a></a></div>
 							</div>
 						</div>
-						<div class="example-site container-fluid">
+						<div class="container-fluid">
 							<div class="row">
 										<div class="col-sm-2"><a href="img/ya_mihalych.jpg" data-lightbox="image-1" data-title="Веб-сайт на строительную тематику"><div class="thumbnail"><img src="img/ya_mihalych.jpg"></div><a class="example-demo-link" target="_blank" href="http://prstfarv.github.io/uk">Демо</a></a></div>
 										<div class="col-sm-2"><a href="img/ya_mihalych.jpg" data-lightbox="image-1" data-title="Веб-сайт на строительную тематику"><div class="thumbnail"><img src="img/ya_mihalych.jpg"></div><a class="example-demo-link" target="_blank" href="http://prstfarv.github.io/uk">Демо</a></a></div>
