--- a/trm/index.html
+++ b/trm/index.html
@@ -21,18 +21,18 @@
 			<div class="container div-center center">
 				<div class="address-container valign text-left">
 					<div class="town">Санкт-Петербург</div>
-					<div class="address">Свердловская наб., 44</div>
+					<div class="address">Снежинскя наб., 88</div>
 					<div class="telephone"><img src="img/telephone.png"> <div class="right">+7 (812) 648-22-41</div></div>
 				</div>
 				<div class="button valign">Задать вопрос</div>
 					<div class="logo-container valign center">
 						<div class="logo"><img src="img/logo.png"></div>
-						<div class="logo-name">termokliker</div>
+						<div class="logo-name">thermowanker</div>
 					</div>	
 				<div class="button valign">Вызвать замерщика</div>
 				<div class="address-container valign text-right">
 					<div class="town">Москва</div>
-					<div class="address">Свердловская наб., 44</div>
+					<div class="address">Снежинскя наб., 88</div>
 					<div class="telephone"><img src="img/telephone.png"> <div class="right">+7 (812) 648-22-41</div></div>
 				</div>
 			</div>
@@ -64,24 +64,24 @@
 					</div>
 					<div class="description">
 						<div class="description-line"></div>
-						<div class="description-text">Компания "Termiklinker" является производителем высокотехнологичных термопанелей с клинкерной плиткой немецкого и польского производства. Простой принцип сборки, легкость и безупречная эстетика данного материала сделала его широко востребованным в отделке жилых, торговых, административных и других зданий. При этом наши киленты согут выбрать оптимальный вид панелей с учетом дизайна клинкерной плитки, своих ценовых возможностей и специфики монтажа. </div>
+						<div class="description-text">Компания "Thermowanker" является производителем высокотехнологичных термопанелей с клинкерной плиткой немецкого и польского производства. Простой принцип сборки, легкость и безупречная эстетика данного материала сделала его широко востребованным в отделке жилых, торговых, административных и других зданий. При этом наши киленты согут выбрать оптимальный вид панелей с учетом дизайна клинкерной плитки, своих ценовых возможностей и специфики монтажа. </div>
 					</div>
-					<div class="big-text center">"Termiklinker" предлагает три серии рядовых панелей для фасадов:</div>
+					<div class="big-text center">"Thermowanker" предлагает три серии рядовых панелей для фасадов:</div>
 					<div class="card">
 						<img class="div-center" src="img/constructor.png">
-						<div class="card-name center">Termoklnker.</div>
+						<div class="card-name center">Thermowanker.</div>
 						<div class="card-sub center opensansbold accent">Конструктор</div>
-						<div class="card-description center grey">Данный вид панелей представляет собой готовый комплект из ППС (пенополистирола) с направляющими и клинкерной плитки для приклеивания. Это оптимальное в еновом плане решение для самостоятельного монтажа. Приобретая "Termoklnker DIY", клиент получает все необходимые материалы для работы: профилированные листы, плитку, спеиальный клей, затирку и крепежные элементы. Благодаря низкой теплопроводности ППС обеспечивается качественная тепло- и звукоизоляция, при этом плиты являются легкими, прочными и морозостойкими.</div>
+						<div class="card-description center grey">Данный вид панелей представляет собой готовый комплект из ППС (пенополистирола) с направляющими и клинкерной плитки для приклеивания. Это оптимальное в еновом плане решение для самостоятельного монтажа. Приобретая "Thermowanker DIY", клиент получает все необходимые материалы для работы: профилированные листы, плитку, спеиальный клей, затирку и крепежные элементы. Благодаря низкой теплопроводности ППС обеспечивается качественная тепло- и звукоизоляция, при этом плиты являются легкими, прочными и морозостойкими.</div>
 					</div>
 					<div class="card">
 						<img class="div-center center" src="img/flink.png">
-						<div class="card-name center">Termoklnker.</div>
+						<div class="card-name center">Thermowanker.</div>
 						<div class="card-sub center opensansbold accent">Flink</div>
 						<div class="card-description center grey">Данный вид панелей представляет собой готовый комплект из ППС (пенополистирола) с направляющими и клинкерной плитки для приклеивания. Это оптимальное в еновом плане решение для самостоятельного монтажа.</div>
 					</div>
 					<div class="card">
 						<img class="div-center" src="img/praktish.png">
-						<div class="card-name center">Termoklnker.</div>
+						<div class="card-name center">Thermowanker.</div>
 						<div class="card-sub center opensansbold accent">Praktish</div>
 						<div class="card-description center grey">Данный вид панелей представляет собой готовый комплект из ППС (пенополистирола) с направляющими и клинкерной плитки для приклеивания. Это оптимальное в еновом плане решение для самостоятельного монтажа.</div>
 					</div>
