--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 							</div>
 							<div class="row">
 										<div class="col-sm-4"></div>
-										<div class="col-sm-2"><a href="img/ya_mihalych.jpg" data-lightbox="image-1" data-title="Веб-сайт на строительную тематику"><div class="thumbnail"><img src="img/ya_mihalych.jpg"></div><a class="example-demo-link" target="_blank" href="http://prstfarv.github.io/trm">Демо</a></a></div>
-										<div class="col-sm-2"><a href="img/offer.jpg" data-lightbox="image-4" data-title="Предложение"><div class="thumbnail"><img src="img/offer.jpg"></div><a class="example-demo-link" target="_blank" href="http://prstfarv.github.io/uk">Демо</a></a></div>
+										<div class="col-sm-2"><a href="img/trm.jpg" data-lightbox="image-1" data-title="Thermowanker"><div class="thumbnail"><img src="img/trm.jpg"></div><a class="example-demo-link" target="_blank" href="http://prstfarv.github.io/trm">Демо</a></a></div>
+										<div class="col-sm-2"><a href="img/uk.jpg" data-lightbox="image-4" data-title="Компания"><div class="thumbnail"><img src="img/uk.jpg"></div><a class="example-demo-link" target="_blank" href="http://prstfarv.github.io/uk">Демо</a></a></div>
 										<div class="col-sm-4"></div>
 							</div>
 						</div>
